--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
       .section {
         margin-bottom: 20px;
       }
+      .section a {
+        color: #f4a62f;
+        text-decoration: none;
+        font-size: 18px;
+      }
     </style>
   </head>
   <body>
@@ -100,12 +105,16 @@
             <span>Cyber Security ⭐⭐⭐⭐☆</span>
           </div>
         </div>
-
-        <a
-          href="https://www.linkedin.com/in/tornike-pakhuridze/"
-          target="_blank"
-          >Linkedin Profile</a
-        >
+        <div class="section">
+          <a
+            href="https://www.linkedin.com/in/tornike-pakhuridze/"
+            target="_blank"
+            >Linkedin Profile</a
+          ><br /><br>
+          <a href="https://github.com/pakhuridze" target="_blank"
+            >Github Profile</a
+          >
+        </div>
       </div>
     </div>
   </body>
