--- a/index.html
+++ b/index.html
@@ -94,7 +94,22 @@
             Do It Georgia (EU)
           </p>
         </div>
-
+        <div class="section">
+          <h2>Education</h2>
+          <p>
+            <strong>Bachelor Of Philosophy</strong> (Mar 2014 - Jul 2018) -
+            Akaki Tsereteli State University, Kutaisi
+          </p>
+          <p>
+            <strong>Python Advanced</strong> (Sep 2024 - Dec 2024) - TBC IT
+            Academy
+          </p>
+          <p>
+            <strong>Cyber Security Engineering</strong> (Nov 2024 - Present) -
+            Do It Georgia (EU)
+          </p>
+          <p><strong>CEH 12</strong> (December 2024 - Present) - Eccouncil</p>
+        </div>
         <div class="section">
           <h2>Skills</h2>
           <div class="skills">
@@ -110,7 +125,7 @@
             href="https://www.linkedin.com/in/tornike-pakhuridze/"
             target="_blank"
             >Linkedin Profile</a
-          ><br /><br>
+          ><br /><br />
           <a href="https://github.com/pakhuridze" target="_blank"
             >Github Profile</a
           >
